--- a/Gerenciamento de Filmes de Locadora/Gerenciamento de Filmes de Locadora.csproj
+++ b/Gerenciamento de Filmes de Locadora/Gerenciamento de Filmes de Locadora.csproj
@@ -98,6 +98,7 @@
     <Compile Include="ConexaoDB.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
