feat(FilmeControlador): Criado a classe filme Controlador
- Adicionado a introdução do menu

--- a/Gerenciamento de Filmes de Locadora/Gerenciamento de Filmes de Locadora.csproj
+++ b/Gerenciamento de Filmes de Locadora/Gerenciamento de Filmes de Locadora.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConexaoDB.cs" />
+    <Compile Include="FilmeControlador.cs" />
     <Compile Include="FilmeDAO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
